2015-08-21  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: README, Etc/FAQ.yo: update latest release from 5.0.8
	to 5.1 in descriptive text.

	* 36262: Src/builin.c, Src/compat.c, Src/utils.c,
	Test/D07multibyte.ztst: replace 36232: the unmeta()
	was needed at a place higher up.  Add test.

	* 36250, tweaked: README, NEWS: highlight bracketed paste mode;
	next version will be 5.1 rather than 5.0.9.

2015-08-20  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 36243: Completion/Unix/Type/_pids: fix a few problems of
	"_pids -m pattern"

2015-08-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36247: Completion/Unix/Command/_git: __git_objects: Complete
	HEAD:./foo correctly in worktree subdir

	* 36237: Completion/Unix/Command/_git: __git_objects: Complete
	HEAD:foo correctly in worktree subdir

	* 36236: Completion/Unix/Command/_git: _git-log: Complete
	multiple revspecs

	* 36236: Completion/Unix/Command/_git: _git-log: complete
	'git rm'd files

2015-08-19  Oliver Kiddle  <opk@zsh.org>

	* 36148: Completion/Unix/Command/_git: _git-log: Complete flags
	after positional argument

2015-08-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 36241: Test/V09datetime.ztst: Test for 36227.

2015-08-19  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36208: Completion/Unix/Command/_subversion: _subversion:
	Complete a few more option switches

2015-08-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 36232: Src/compat.c: Unmeta an additional chdir().

	* 36227: Src/Builtins/sched.c, Src/Modules/datetime.c,
	Src/Modules/stat.c, Src/builtin.c, Src/prompt.c, Src/utils.c,
	Src/watch.c: real fix for metafication problem in ztrftime:
	unmetafy fmt on input and metafy return value with correct
	length.

	* unposted: revert 36222, not the correct fix.

	* 36222: Src/Modules/datetime.c: unmetafy output from strftime.

	* 36218: Src/files.c: use unmetafied file name for mkdir()
	system call.

	* 36216: Doc/Zsh/zle.yo: Simpler saving of UNDO_LIMIT_NO.
